# capstone-repository

./: .env.example  .gitignore  AGENTS.md  README.md  REPO_FEATURE_MAP.md  chapter4_alerts_log.json  chapter4_events_log.json  chapter4_trial_review_choices.md  chapter4_trial_review_sheet.csv  data_analysis.md  desktop_launcher.py  esp32_c3_controller.ino  mobile_companion_application_implementation_plan.md  opencode.json  project_architecture.md  requirements.txt  resources_list.md  sensor_camera_event_curl_commands.txt  session-ses_22be.md  session-ses_28b2.md  session-ses_2bd1.md  todo.md
.github/workflows/: build-windows.yml  (+2 more)
backend/: README.md  __init__.py  run_backend.py
chapter4_outputs/: FIGURE_INDEX.md  chapter4_dashboard.html  chapter4_metrics_summary.csv  confusion_matrix_status.txt
condo_guardian_app/: README.md  pubspec.yaml
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/resources/: .env.example
desktop/src-tauri/src/: main.rs
docs/: README.md  agent-workflow.md  change-safety.md  coding-standards.md  testing-rules.md
firmware/: README.md
scripts/: generate_chapter4_figures.py  generate_chapter4_trial_review_sheet.py  preview_full_system.sh  windows_build_backend.bat  windows_build_installer.bat  windows_install_app.bat  windows_installer.iss  windows_run_backend.bat
thesis_context_pack/: IMRAD_Paper_Draft.md  README.md  REVISION_NOTES.md  THESIS_TIMELINE_GANTT_CHART.md
web_dashboard_ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+214 files in other folders)
